[FEAT] Se agrega CD y se solucionan problemas visuales

--- a/css/index.css
+++ b/css/index.css
@@ -16,3 +16,4 @@
 @import url(./pages/beneficios.css);
 @import url(./pages/actividadGremial.css);
 @import url(./pages/contacto.css);
+@import url(./pages/cd.css);
