--- a/css/pages/institucional.css
+++ b/css/pages/institucional.css
@@ -5,9 +5,18 @@
     display: none;
 }
 
-#mod_cel{
+.tit_quienes_somos{
+    display: flex;
+    align-items: center;
     display: none;
 }
+
+.icon_input,
+.icon_output{
+    font-size: var(--font-large);
+    padding: 0 10px;
+}
+
 .sinstitucional {
     padding: 20px 10px;
     display: grid;
@@ -258,15 +267,14 @@
 .aside_menu{
     padding: 0;
 }
-/* .aside_right {
-    grid-area: aside_r;
-} */
 
 .article_title {
     padding: 10px 0px;
     font-family: var(--alternative-font);
     font-size: var(--font-medium);
+    line-height: var(--font-medium);
     font-weight: 550;
+    cursor: pointer;
 }
 
 .article_contenido {
@@ -291,12 +299,16 @@
     width: 100%;
     height: 100%;
 }
-
+/* MOBILES STYLES */
 @media screen and (max-width: 768px) {
-    #mod_cel{
-        display: block;
+
+    .tit_quienes_somos{
+        display: flex;
     }
 
+    .icon_output{
+        display: none;
+    }
     .sinstitucional {
         font-size: var(--font-xnormal);
         grid-template-areas:
