--- a/css/pages/institucional.css
+++ b/css/pages/institucional.css
@@ -42,7 +42,7 @@
 
 .article_contenido_grid {
     font-size: var(--font-small);
-    font-family: var(--terciary-font);
+    font-family: var(--alternative-font);
     margin-top: 10px;
     display: grid;
     grid-template-columns: 50px 1fr 50px 1fr;
@@ -65,12 +65,13 @@
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
     grid-gap:10px;
+    background-color:var(--secondary-color-600);
 }
 
 .article_derechos {
     padding: 20px;
     font-family: var(--alternative-font);
-    font-size: 1.1em;
+    /* font-size: var(--font-small); */
     font-weight: 500;
     display: flex;
     align-items: center;
@@ -79,24 +80,6 @@
     width: 100%;
     height: 100%;
     min-height: 200px;
-}
-.article-box7 :nth-child(1){
-    background-color:var(--secondary-color-700);
-}
-.article-box7 :nth-child(2){
-    background-color:var(--secondary-color-700);
-}
-.article-box7 :nth-child(3){
-    background-color:var(--secondary-color-700);
-}
-.article-box7 :nth-child(4){
-    background-color:var(--secondary-color-700);
-}
-.article-box7 :nth-child(5){
-    background-color:var(--secondary-color-700);
-}
-.article-box7 :nth-child(6){
-    background-color:var(--secondary-color-700);
 }
 
 .article-img_1 {
@@ -271,8 +254,8 @@
 .article_title {
     padding: 10px 0px;
     font-family: var(--alternative-font);
-    font-size: var(--font-medium);
-    line-height: var(--font-medium);
+    font-size: var(--font-small);
+    line-height: var(--font-small);
     font-weight: 550;
     cursor: pointer;
 }
@@ -284,7 +267,7 @@
     box-shadow: 4px 4px 4px var(--dark-color-500);
     /* border-style: ridge; */
     padding: 20px;
-    min-height: 200px;
+    /* min-height: 200px; */
     height: max-content;
     border-radius: 10px;
     background-color: var(--secondary-color-700);
@@ -292,7 +275,7 @@
 
 .article_texto {
     font-family: var(--alternative-font);
-    font-size: var(--font-medium);
+    font-size: var(--font-small);
 }
 
 .article-iframe_mapa {
