--- a/css/pages/beneficios.css
+++ b/css/pages/beneficios.css
@@ -52,14 +52,16 @@
    margin-bottom: 10px;
    overflow: hidden;
 }
-
+.pp a{
+   display: none;
+}
 .glider-next,
 .glider-prev{
    font-size: 3em;
 }
 
 .carousel{
-   width: 40%;
+   width: 90%;
 }
 
 .glider_text{
@@ -68,8 +70,9 @@
    flex-direction: column;
    justify-content: space-evenly;
    /* align-items: center; */
-   width: 50%;
-   padding: 10px 20px;
+   width: 100%;
+   margin-left: 20px;
+   padding: 0px 25px;
 }
 
 .title_subsidio{
