--- a/css/pages/home.css
+++ b/css/pages/home.css
@@ -50,6 +50,7 @@
     font-size: var(--font-wspico);
     border-radius: 52px;
     box-shadow: 0px 1px 10px rgba(0,0,0,0.3);
+    z-index: 1000;
  }
 
 @media screen and (max-width: 430px) {
