--- a/css/pages/beneficios.css
+++ b/css/pages/beneficios.css
@@ -193,13 +193,14 @@
 .hotel{
    display: flex;
    flex-direction: column;
-   width: 49%;
+   width: 30%;
    margin: 0 auto; 
    text-align: center;
    position: relative;
 }
 
 .title_hotel{
+   min-height: 71px;
    display: flex;
    flex-wrap: nowrap;
    gap: 15px;
@@ -207,7 +208,7 @@
    align-items: center;
    font-family: var(--terciary-font);
    font-size: var(--font-msmall);
-   font-weight: 550;
+   font-weight: 500;
    background: linear-gradient(to right top, #208764, #568d4d, #838f3a, #b08d37, #da8649);
    margin-bottom: 10px;
    padding: 10px 0;
@@ -222,7 +223,7 @@
    background-repeat: no-repeat;
    width: 100%;
    height: 430px;
-   background-image: url(../../img/convenio_hoteles/hotelAvenida.png);
+   /* background-image: url(../../img/convenio_hoteles/hotelAvenida.png); */
    background-position: center;
    /* z-index: 5; */
 }
