--- a/css/pages/beneficios.css
+++ b/css/pages/beneficios.css
@@ -107,7 +107,7 @@
    padding: 10px;
    text-align: center;
    font-size: var(--font-small);
-   color: var(--primary-color-solid);
+   color: var( --dark-color-solid);
    font-weight: 650;
 }
 
@@ -208,60 +208,69 @@
    align-items: center;
    font-family: var(--terciary-font);
    font-size: var(--font-msmall);
-   font-weight: 500;
-   background: linear-gradient(to right top, #208764, #568d4d, #838f3a, #b08d37, #da8649);
+   font-weight: 600;
+   background: var(--gray-color-solid);
    margin-bottom: 10px;
    padding: 10px 0;
+   color: #fff;
 }
 
 .text_convenioHoteles{
    margin: 10px;
 }
 
-.detalle_avenida{
-   background-size: contain;
-   background-repeat: no-repeat;
-   width: 100%;
-   height: 430px;
-   /* background-image: url(../../img/convenio_hoteles/hotelAvenida.png); */
-   background-position: center;
-   /* z-index: 5; */
-}
-.detalle_avenida:hover + .tarifas{
-display: block;
+.popover_config{
+   font-family:var(--alternative-font) !important;
+   font-weight: 500;
+   font-size: var(--font-xnormal);
+   cursor: pointer;
+   border-radius: 5px;
 }
 
-.detalle_centuria{
+/* .detalle_avenida{ */
+   /* background-size: contain; */
+   /* background-repeat: no-repeat; */
+   /* width: 100%;
+   height: 430px; */
+   /* background-image: url(../../img/convenio_hoteles/hotelAvenida.png); */
+   /* background-position: center; */
+   /* z-index: 5; */
+/* } */
+/* .detalle_avenida:hover + .tarifas{
+display: block;
+} */
+
+/* .detalle_centuria{
    background-size:contain;
    background-repeat: no-repeat;
    width: 100%;
    height: 430px;
    background-image: url(../../img/convenio_hoteles/hotelCenturia.png);
    background-position: center;
-}
-
+} */
+/* 
 .detalle_centuria:hover + .tarifas{
    display: block;
-   }
+   } */
    
 
-.detalle_uthgra{
+/* .detalle_uthgra{
    background-size: contain;
    background-repeat: no-repeat;
    width: 100%;
    height: 430px;
    background-image: url(../../img/convenio_hoteles/hotelUthgra.png);
    background-position: center;
-}
+} */
 
-.detalle_uthgra:hover + .tarifas{
+/* .detalle_uthgra:hover + .tarifas{
    display: block;
-   }
-.opacidad{
+   } */
+/* .opacidad{
    opacity: 0.8;
-}
+} */
 
-.tarifas{
+/* .tarifas{
    display: none;
    position: absolute;
    text-align: left;
@@ -277,7 +286,7 @@ display: block;
 
 .tarifas_visible{
    display: block;
-}
+} */
 /* Colocando estilos loading */
 .loading {
    position: fixed;
@@ -311,9 +320,9 @@ display: block;
  /* Fin estilos loading */
 
 @media screen and (max-width: 768px) {
-   .detalle_subsidio{
+   /* .detalle_subsidio{
       width: 100%;
-   }
+   } */
 }
 
 .icon_infoHotel{
@@ -332,7 +341,8 @@ display: block;
 }
 
 .hotel{
-   width: 100%;
+   width: 50%;
+   min-width: 300px;
 }
 }
 
@@ -343,7 +353,7 @@ display: block;
 }
 
 @media screen and (max-width: 460px) {
-   .detalle_avenida, .detalle_centuria, .detalle_uthgra{
+   /* .detalle_avenida, .detalle_centuria, .detalle_uthgra{
       height: 300px;
-   }
+   } */
 }
