[FEAT] se agrega carousel 3D

--- a/css/index.css
+++ b/css/index.css
@@ -17,3 +17,4 @@
 @import url(./pages/actividadGremial.css);
 @import url(./pages/contacto.css);
 @import url(./pages/cd.css);
+@import url(./pages/carousel.css);
