--- a/css/misc/normalize.css
+++ b/css/misc/normalize.css
@@ -25,9 +25,14 @@ ul, ol {
 
 .container_Propio{
     max-width:1200px;
-    margin: 0px auto;
+    margin: 0 auto;
 }
 
 img{
     width: 100%;
+}
+
+body{
+    height: 100vh;
+    /* background-color: #f5f5f5; */
 }
