--- a/css/pages/carousel.css
+++ b/css/pages/carousel.css
@@ -1,30 +1,28 @@
-*{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-}
-.containerCarousel .carouselGeneral{
-    white-space: nowrap;
-    font-size: 0px;
-    cursor: pointer;
-    overflow: hidden;
+.movies{
+    padding: 50px 0 150px 0;
 }
 
-.containerCarousel{
-    display: flex;
-    gap: 10px;
-    align-items: center;
-    justify-content: center;
-    min-height: 100vh;
-    max-width: 1200px;
-}
-.carouselGeneral_img{
-    height: 400px;
-    object-fit: cover;
-    margin-left: 5px;
-    width: calc(100% / 3);
+.swiper{
+    width: 100%;
 }
 
-.carouselGeneral_img:first-child{
-    margin-left: 0px;
+.swiper-slide{
+    background-position: center;
+    background-size: cover;
+    width: 250px;
+}
+
+.swiper-slide img{
+    display: block;
+    width: 100%;
+}
+
+@media(max-width:991px){
+    body{
+        min-height: 0vh;
+    }
+    .movies{
+        padding: 30px;
+    }
+    
 }
