--- a/css/pages/actividadGremial_1.css
+++ b/css/pages/actividadGremial_1.css
@@ -106,22 +106,21 @@
     
     gap: 20px;
     display: grid;
-    grid-template-columns: repeat(2,1fr);
-    grid-row: auto;
+    grid-template-columns: repeat(3,1fr);
 }
 /* Estilos de cards novedades */
 .card{
     display: flex;
     flex-direction: column;
     gap: 20px;
-    justify-content: space-between;
-    align-items: stretch;
+    justify-content: center;
+    align-items: center;
     padding: 5px;
     line-height: 1.2em;
     border-bottom: 1px solid #000;
-    /* height: 300px; */
+    height: 300px;
     min-width: 250px;
-    padding: 20px 20px;
+    padding: 0 20px;
 }
 
 .card-title{
@@ -129,36 +128,19 @@
     font-size: var(--font-normal);
     font-weight: 700;
     text-align: center;
-    line-height: 1.2em;
+    line-height: 1.5em;
 }
 
 .card-img{
     text-align: center;
-    width: 100%;
-    /* max-width:150px;
-    min-width: 150px; */
+    max-width:150px;
+    min-width: 150px;
     background-size:cover;
     background-image: url('../../img/logoasociacion.ico');
-    height: auto;
+    height: 100px;
 }
 
 .card-epigrafe{
     text-align: justify;
     font-size: var(--font-xnormal);
-    font-weight: 500;
-    font-stretch:ultra-condensed;
-}
-
-.pdf-container {
-    display: flex;
-    width: 100%;
-    height: 500px;
-    border: 1px solid #ccc;
-}
-
-@media screen and (max-width: 768px) {
-    .cards-news{
-        grid-template-columns: 1fr;
-
-    }
 }
