--- a/css/pages/beneficios_1.css
+++ b/css/pages/beneficios_1.css
@@ -118,11 +118,11 @@
 .btn-info {
    border-color: var(--secondary-color-solid);
    background-color:var(--secondary-color-900);
-   margin: var(--spacing-8);
-   /* padding: var(--spacing-8); */
-   font-weight: 400;
+   margin: var(--spacing-12);
+   padding: var(--spacing-8);
+   font-weight: 500;
    font-family: var(--terciary-font);
-   font-size: var(--font-normal);
+   font-size: var(--font-small);
 }
 
 .detalle_subsidio{
