--- a/css/index__.css
+++ b/css/index__.css
@@ -4,19 +4,19 @@
 @import url('https://fonts.googleapis.com/css2?family=Euphoria+Script&display=swap');
 
 /* misc*/
-@import url(./misc/normalize.css?v=1);
-@import url(./misc/vars.css?v=1);
+@import url(./misc/normalize.css);
+@import url(./misc/vars.css);
 
 /* partials */
-@import url(./partials/footer.css?v=1);
-@import url(./partials/header.css?v=1);
-@import url(./partials/aside.css?v=1);
+@import url(./partials/footer.css);
+@import url(./partials/header.css);
+@import url(./partials/aside.css);
 
 /* pages */
-@import url(./pages/home.css?v=1);
-@import url(./pages/institucional.css?v=1);
-@import url(./pages/beneficios.css?v=1);
-@import url(./pages/actividadGremial.css?v=1);
-@import url(./pages/contacto.css?v=1);
-@import url(./pages/cd.css?v=1);
-@import url(./pages/carousel.css?v=1);
+@import url(./pages/home.css);
+@import url(./pages/institucional.css);
+@import url(./pages/beneficios.css);
+@import url(./pages/actividadGremial.css);
+@import url(./pages/contacto.css);
+@import url(./pages/cd.css);
+@import url(./pages/carousel.css);
