--- a/css/pages/contacto.css
+++ b/css/pages/contacto.css
@@ -55,3 +55,19 @@ width: 100%;
   display: inline-block;
   text-align: left;
 }
+<form id="contactForm" action="process.php" method="post">
+<label for="name">Nombre:</label>
+<input type="text" id="name" name="name" required>
+<br>
+<label for="email">Correo:</label>
+<input type="email" id="email" name="email" required>
+<br>
+<label for="subject">Asunto:</label>
+<input type="text" id="subject" name="subject" required>
+<br>
+<label for="message">Comentario:</label>
+<textarea id="message" name="message" required></textarea>
+<br>
+<input type="hidden" id="recaptchaResponse" name="recaptchaResponse">
+<button type="submit" id="submitBtn">Enviar</button>
+</form>
